# unet_variants

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: base.yaml  benchmark.yaml  computational_benchmark.yaml  config.yaml
configs/data/: isic2017.yaml
configs/data/stats/: isic2017_std_train.yaml  isic2017_vmunet.yaml
configs/dataset/: augmentation.yaml  isic2017.yaml  isic2018.yaml
configs/dataset/stats/: imagenet.yaml  isic2017_vmunet.yaml  none.yaml
configs/eval/: default.yaml
configs/inspect/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: att_unet.yaml  malunet.yaml  resnet_unet.yaml  resunet.yaml  swinunet.yaml  transunet.yaml  unet.yaml  vmunet.yaml
configs/model/unet_config/: base.yaml  resnet18.yaml  resnet34.yaml
configs/task/: binary.yaml
configs/train/: default.yaml
docs/: 01installation.md  02getting_started.md  03datasets.md  04model_zoo.md  05computational_benchmark.md  06training_guide.md  07evaluation.md  benchmarks.md  datasets.md  getting_started.md  installation.md  model_zoo.md  training_guide.md
runs/mlruns/: README.md
scripts/: bench.sh  benchmark.py  computational_bench.sh  computational_benchmark.py  evaluate.py  model_inspect.py  resume.py  run_experiment.py  train.py
src/dataset/: loaders.py  prepare.py
src/engine/: evaluate.py  experiment_manager.py  validate.py
src/factory/: loss.py  models.py  optim.py  registries.py  scheduler.py
src/models/cnn/: attention_unet.py  malunet.py  unet.py
src/models/ssm/: vmunet.py
src/models/transformers/: swinunet.py  transunet.py
src/unet_variants/data/: dataset.py  loaders.py  prepare.py  transforms.py
src/unet_variants/dataset/: loaders.py  transforms.py
src/unet_variants/engine/: evaluate.py  train.py  validate.py
src/unet_variants/experiments/: experiment.py
src/unet_variants/inspection/: flops.py  inspector.py  (+3 more)
src/utils/: early_stopping.py  logging.py  model_inspection.py  seed.py  visualization.py
(+36 files in other folders)
