
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unet-variants"
version = "0.1.0"
description = "Benchmark framework for U-Net variants in binary medical image segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "mlflow>=3.10.1",
    "psutil",
    "nvidia-ml-py",
    "timm",
    "einops",
    "torchinfo",
    "ultralytics-thop",
    "onnx",
    "netron",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
