
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unet-variants"
version = "0.1.0"
description = "Benchmark framework for U-Net variants in binary medical image segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.10.1",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.590.48",
    "hydra-core>=1.3",
    "torchinfo>=1.8.0",
    "ultralytics-thop>=2.0.18",
    "onnxscript>=0.6.2",
    "netron>=8.9.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
